--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -46,22 +46,22 @@
   <section class="elements">
     <div class="container">
       <div class="services">
-        <ul>
-          <li class="first">
+        <div class="services-list">
+          <div class="services-list__first">
             <span class="top">установка</span>
             <span class="bottom b-first">Выезд специалиста бесплатно</span>
-          </li>
-          <li class="second">
+          </div>
+          <div class="services-list__second">
             <span class="top">продажа</span>
             <span class="bottom">Расчет бесплатно</span>
-          </li>
-          <li class="third">
+          </div>
+          <div class="services-list__third">
             <span class="top">Ремонт квартир</span>
-          </li>
-          <li class="fourth">
+          </div>
+          <div class="services-list__fourth">
             <span class="top">каркасное деревянное строительство (беседки, баки)</span>
-          </li>
-        </ul>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -70,26 +70,26 @@
       <div class="siding">
         <span class="top">сайдинг</span>
         <p>Сайдинг от «Альта-Профиль» – уникальный инновационный продукт. Он полностью соответствует международным стандартам качества и адаптирован к российским климатическим условиям.</p>
-        <ul class="photos">
-          <li><img src="../img/layer-5.png" alt="Сайдинг 1"/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-6.png" alt="Сайдинг 2"/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-7.png" alt="Сайдинг 3"/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-8.png" alt="Сайдинг 4"/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-9.png" alt="Сайдинг 5"/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-10.png" alt="Сайдинг 6"/><a href="#">Подробно</a></li>
-        </ul>
+        <div class="photos">
+          <div><img src="../img/layer-5.png" alt="Сайдинг 1"/><a href="#">Подробно</a></div>
+          <div><img src="../img/layer-6.png" alt="Сайдинг 2"/><a href="#">Подробно</a></div>
+          <div><img src="../img/layer-7.png" alt="Сайдинг 3"/><a href="#">Подробно</a></div>
+          <div><img src="../img/layer-8.png" alt="Сайдинг 4"/><a href="#">Подробно</a></div>
+          <div><img src="../img/layer-9.png" alt="Сайдинг 5"/><a href="#">Подробно</a></div>
+          <div><img src="../img/layer-10.png" alt="Сайдинг 6"/><a href="#">Подробно</a></div>
+        </div>
       </div>
       <div class="panels">
         <span class="top">Панели</span>
         <p>Элегантный цокольный сайдинг производства «Альта-Профиль» надежно защитит здание от механических повреждений и воздействия неблагоприятных климатических факторов.</p>
-        <ul class="photos">
-          <li><img src="../img/layer-11.png" alt="Панель 1"/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-12.png" alt="Панель 2"/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-13.png" alt="Панель 3"/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-14.png" alt="Панель 4"/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-15.png" alt="Панель 5"/><a href="#">Подробно</a></li>
-          <li><img src="../img/layer-16.png" alt="Панель 6"/><a href="#">Подробно</a></li>
-        </ul>
+        <div class="photos">
+          <div><img src="../img/layer-11.png" alt="Панель 1"/><a href="#">Подробно</a></div>
+          <div><img src="../img/layer-12.png" alt="Панель 2"/><a href="#">Подробно</a></div>
+          <div><img src="../img/layer-13.png" alt="Панель 3"/><a href="#">Подробно</a></div>
+          <div><img src="../img/layer-14.png" alt="Панель 4"/><a href="#">Подробно</a></div>
+          <div><img src="../img/layer-15.png" alt="Панель 5"/><a href="#">Подробно</a></div>
+          <div><img src="../img/layer-16.png" alt="Панель 6"/><a href="#">Подробно</a></div>
+        </div>
       </div>
     </div>
   </section>
@@ -98,32 +98,32 @@
       <h2>О компании</h2>
       <p>«Альта-Профиль» – первый отечественный производитель качественного сайдинга. Свою деятельность мы начали еще в 1999 году, и с тех пор из небольшого завода компания превратилась в полнофункциональное производство с широкой дилерской сетью по всей России.</p>
       <p>Руководствуясь передовыми методами и лучшими технологиями зарубежных коллег, на основе собственной лабораторной базы мы создали уникальный товар, который оптимально подходит для использования в российских климатических условиях.</p>
-      <ul>
-        <li><span><img src="../img/dds.png" alt="10 лет опыта"/></span><span>10 лет опыта</span></li>
-        <li><span><img src="../img/sdsd.png" alt="Гарантия 3 года на работы,10 лет на материалы"/></span><span>Гарантия 3 года на работы,10 лет на материалы</span></li>
-        <li><span><img src="../img/ss.png" alt="Работа по договору"/></span><span>Работа по договору</span></li>
-        <li><span><img src="../img/adsds.png" alt="Точность расчетов без доп. счетов"/></span><span>Точность расчетов без доп. счетов</span></li>
-        <li><span><img src="../img/dasd.png" alt="Бесплатная доставка"/></span><span>Бесплатная доставка</span></li>
-        <li><span><img src="../img/ds.png" alt="Монтаж круглый год"/></span><span>Монтаж круглый год</span></li>
-      </ul>
+      <div class="photos">
+        <div><span><img src="../img/dds.png" alt="10 лет опыта"/></span><span>10 лет опыта</span></div>
+        <div><span><img src="../img/sdsd.png" alt="Гарантия 3 года на работы,10 лет на материалы"/></span><span>Гарантия 3 года на работы,10 лет на материалы</span></div>
+        <div><span><img src="../img/ss.png" alt="Работа по договору"/></span><span>Работа по договору</span></div>
+        <div><span><img src="../img/adsds.png" alt="Точность расчетов без доп. счетов"/></span><span>Точность расчетов без доп. счетов</span></div>
+        <div><span><img src="../img/dasd.png" alt="Бесплатная доставка"/></span><span>Бесплатная доставка</span></div>
+        <div><span><img src="../img/ds.png" alt="Монтаж круглый год"/></span><span>Монтаж круглый год</span></div>
+      </div>
     </div>
   </section>
   <section class="reviews">
     <div class="container">
       <div class="read-reviews">
         <h2>отзывы</h2>
-        <ul>
-          <li>
+        <div class="revs">
+          <div>
             <span><img src="../img/dsdsd.png" alt="Пантелеймон Христарождественский"/></span>
             <h3>Пантелеймон Христарождественский</h3>
             <p>Современный облицовочный материал. Хорошо моется. Не трескается зимой, в отличие от вагонки. Надежный. Огромный выбор расцветок и материалов.  </p>
-          </li>
-          <li>
+          </div>
+          <div>
             <span><img src="../img/fdfdfd.png" alt="Виктория Лебедева"/></span>
             <h3>Виктория Лебедева</h3>
             <p>Современный облицовочный материал. Хорошо моется. Не трескается зимой, в отличие от вагонки. Надежный. Огромный выбор расцветок и материалов. Спасибо!  </p>
-          </li>
-        </ul>
+          </div>
+        </div>
         <a href="#" class="show-all">Все новости</a>
       </div>
       <div class="specialist">
@@ -141,8 +141,8 @@
   <section class="news">
     <div class="container">
       <h2>Новости</h2>
-      <ul>
-        <li>
+      <div class="news-list">
+        <div>
           <div class="img">
             <img src="../img/layer-19.png" alt="Поступление нового сайдинга"/>
           </div>
@@ -151,8 +151,8 @@
 
             <p>Современный облицовочный материал. Хорошо моется. Не трескается зимой, в отличие от вагонки. Надежный. Огромный выбор расцветок и материалов, а также современный облицовочный материал. Хорошо моется. Не трескается зимой, в отличие от</p>
           </div>
-        </li>
-        <li>
+        </div>
+        <div>
           <div class="img">
             <img src="../img/layer-20.png" alt="Поступление нового сайдинга"/>
           </div>
@@ -161,8 +161,8 @@
 
             <p>Современный облицовочный материал. Хорошо моется. Не трескается зимой, в отличие от вагонки. Надежный. Огромный выбор расцветок и материалов, а также современный облицовочный материал. Хорошо моется. Не трескается зимой, в отличие от</p>
           </div>
-        </li>
-      </ul>
+        </div>
+      </div>
     </div>
   </section>
   <section class="gallery">
