--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -133,7 +133,7 @@
           <input type="text" placeholder="Телефон"/>
           <input class="full" type="text" placeholder="Адрес"/>
           <textarea cols="30" rows="3" placeholder="Комментарий"></textarea>
-          <button>вызвать</button>
+          <!--<button>вызвать</button>-->
         </form>
       </div>
     </div>
