--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -46,31 +46,29 @@
   <section class="elements">
     <div class="container">
       <div class="services">
-        <div class="services-list">
-          <div class="services-list__first">
-            <span class="top">установка</span>
-            <span class="bottom b-first">Выезд специалиста бесплатно</span>
+          <div class="services__item services__item--one">
+            <span class="services__item__top">установка</span>
+            <span class="services__item__bottom b-first">Выезд специалиста бесплатно</span>
           </div>
-          <div class="services-list__second">
-            <span class="top">продажа</span>
-            <span class="bottom">Расчет бесплатно</span>
+          <div class="services__item services__item--two">
+            <span class="services__item__top">продажа</span>
+            <span class="services__item__bottom">Расчет бесплатно</span>
           </div>
-          <div class="services-list__third">
-            <span class="top">Ремонт квартир</span>
+          <div class="services__item services__item--three">
+            <span class="services__item__top">Ремонт квартир</span>
           </div>
-          <div class="services-list__fourth">
-            <span class="top">каркасное деревянное строительство (беседки, баки)</span>
+          <div class="services__item services__item--four">
+            <span class="services__item__top">каркасное деревянное строительство (беседки, баки)</span>
           </div>
         </div>
-      </div>
     </div>
   </section>
   <section class="yellow">
     <div class="container">
-      <div class="siding">
-        <span class="top">сайдинг</span>
-        <p>Сайдинг от «Альта-Профиль» – уникальный инновационный продукт. Он полностью соответствует международным стандартам качества и адаптирован к российским климатическим условиям.</p>
-        <div class="photos">
+      <div class="panel panel__siding">
+        <span class="panel__top">сайдинг</span>
+        <p class="panel__description">Сайдинг от «Альта-Профиль» – уникальный инновационный продукт. Он полностью соответствует международным стандартам качества и адаптирован к российским климатическим условиям.</p>
+        <div class="panel__photos">
           <div><img src="../img/layer-5.png" alt="Сайдинг 1"/><a href="#">Подробно</a></div>
           <div><img src="../img/layer-6.png" alt="Сайдинг 2"/><a href="#">Подробно</a></div>
           <div><img src="../img/layer-7.png" alt="Сайдинг 3"/><a href="#">Подробно</a></div>
@@ -79,16 +77,16 @@
           <div><img src="../img/layer-10.png" alt="Сайдинг 6"/><a href="#">Подробно</a></div>
         </div>
       </div>
-      <div class="panels">
-        <span class="top">Панели</span>
-        <p>Элегантный цокольный сайдинг производства «Альта-Профиль» надежно защитит здание от механических повреждений и воздействия неблагоприятных климатических факторов.</p>
-        <div class="photos">
-          <div><img src="../img/layer-11.png" alt="Панель 1"/><a href="#">Подробно</a></div>
-          <div><img src="../img/layer-12.png" alt="Панель 2"/><a href="#">Подробно</a></div>
-          <div><img src="../img/layer-13.png" alt="Панель 3"/><a href="#">Подробно</a></div>
-          <div><img src="../img/layer-14.png" alt="Панель 4"/><a href="#">Подробно</a></div>
-          <div><img src="../img/layer-15.png" alt="Панель 5"/><a href="#">Подробно</a></div>
-          <div><img src="../img/layer-16.png" alt="Панель 6"/><a href="#">Подробно</a></div>
+      <div class="panel panel__panels">
+        <span class="panel__top">Панели</span>
+        <p class="panel__description">Элегантный цокольный сайдинг производства «Альта-Профиль» надежно защитит здание от механических повреждений и воздействия неблагоприятных климатических факторов.</p>
+        <div class="panel__photos">
+          <div class="item"><img class="item__img" src="../img/layer-11.png" alt="Панель 1"/><a class="item__link" href="#">Подробно</a></div>
+          <div class="item"><img class="item__img" src="../img/layer-12.png" alt="Панель 2"/><a class="item__link" href="#">Подробно</a></div>
+          <div class="item"><img class="item__img" src="../img/layer-13.png" alt="Панель 3"/><a class="item__link" href="#">Подробно</a></div>
+          <div class="item"><img class="item__img" src="../img/layer-14.png" alt="Панель 4"/><a class="item__link" href="#">Подробно</a></div>
+          <div class="item"><img class="item__img" src="../img/layer-15.png" alt="Панель 5"/><a class="item__link" href="#">Подробно</a></div>
+          <div class="item"><img class="item__img" src="../img/layer-16.png" alt="Панель 6"/><a class="item__link" href="#">Подробно</a></div>
         </div>
       </div>
     </div>
