--- a/src/sass/components/company.scss
+++ b/src/sass/components/company.scss
@@ -6,44 +6,42 @@
     background-image: url("../img/layer-28-copy.png");
     background-position: 37% 88%;
     background-repeat: no-repeat;
-    .container {
-        h2 {
-            font-size: 24px;
-            font-weight: 400;
+}
+.header {
+    font-size: 24px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: $black;
+    @media #{$tablet} {
+        text-align: center;
+    }
+}
+.description {
+    padding-top: 11px;
+    color: $black;
+    font-family: 'Arial MT', sans-serif;
+    font-size: 14px;
+}
+.photos {
+    padding-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    @media #{$mobile} {
+        flex-wrap: wrap;
+    }
+    .item {
+        display: flex;
+        flex-direction: column;
+        @media #{$mobile} {
+            width: 50%;
+        }
+        &__text, &__img {
+            text-align: center;
+            max-width: 150px;
+            font-size: 17px;
             text-transform: uppercase;
-            color: $black;
-            @media #{$tablet} {
-                text-align: center;
-            }
-        }
-        p {
-            padding-top: 11px;
-            color: $black;
-            font-family: 'Arial MT', sans-serif;
-            font-size: 14px;
-        }
-        ul {
-            padding-top: 30px;
-            display: flex;
-            justify-content: space-between;
             @media #{$mobile} {
-                flex-wrap: wrap;
-            }
-            li {
-                display: flex;
-                flex-direction: column;
-                @media #{$mobile} {
-                    width: 50%;
-                }
-                span {
-                    text-align: center;
-                    max-width: 150px;
-                    font-size: 17px;
-                    text-transform: uppercase;
-                    @media #{$mobile} {
-                        font-size: 14px;
-                    }
-                }
+                font-size: 14px;
             }
         }
     }
