--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -40,18 +40,27 @@ footer {
                     padding-bottom: 10px;
                     padding-top: 10px;
                 }
-                li {
+
+                &__item {
                     padding-right: 10px;
+                    padding-left: 7px;
+                    border-right: 1px solid $yellow;
                     &:first-child {
                         padding-left: 0;
                     }
-                    a {
+                    &__link {
                         display: block;
                         color: $black;
-                        font-size: 14px;
+                        font-size: 17px;
                         font-weight: 400;
                         line-height: 20px;
                         text-transform: uppercase;
+                        @media #{$mobile} {
+                            font-size: 14px;
+                        }
+                        &:hover {
+                            color: $yellow;
+                        }
                     }
                 }
             }
