--- a/src/sass/components/navigation.scss
+++ b/src/sass/components/navigation.scss
@@ -3,40 +3,37 @@
     border-top: 1px solid $yellow;
     border-bottom: 1px solid $yellow;
     padding-bottom: 10px;
-    .container {
-        .nav {
-            padding: 20px 0;
-            display: flex;
-            @media #{$tablet} {
-                flex-wrap: wrap;
-                justify-content: center;
-                padding-bottom: 10px;
-                padding-top: 10px;
-            }
+}
+.nav {
+    padding: 20px 0;
+    display: flex;
+    @media #{$tablet} {
+        flex-wrap: wrap;
+        justify-content: center;
+        padding-bottom: 10px;
+        padding-top: 10px;
+    }
 
-            li {
-                padding-right: 10px;
-                padding-left: 7px;
-                border-right: 1px solid $yellow;
-                &:first-child {
-                    padding-left: 0;
-                }
-                a {
-                    display: block;
-                    color: $white;
-                    font-size: 17px;
-                    font-weight: 400;
-                    line-height: 20px;
-                    text-transform: uppercase;
-                    @media #{$mobile} {
-                        font-size: 14px;
-                    }
-                    &:hover {
-                        color: $yellow;
-                    }
-                }
+    &__item {
+        padding-right: 10px;
+        padding-left: 7px;
+        border-right: 1px solid $yellow;
+        &:first-child {
+            padding-left: 0;
+        }
+        &__link {
+            display: block;
+            color: $white;
+            font-size: 17px;
+            font-weight: 400;
+            line-height: 20px;
+            text-transform: uppercase;
+            @media #{$mobile} {
+                font-size: 14px;
+            }
+            &:hover {
+                color: $yellow;
             }
         }
     }
-
 }
