--- a/src/sass/components/news.scss
+++ b/src/sass/components/news.scss
@@ -4,60 +4,58 @@
     border-bottom: 1px solid $white;
     background-color: #898989;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.22) 0%, rgba(255, 255, 255, 0.22) 50%, rgba(0, 0, 0, 0.22) 100%);
-    .container {
-        h2 {
-            font-size: 24px;
-            @media #{$tablet} {
-                text-align: center;
+}
+.header {
+    font-size: 24px;
+    @media #{$tablet} {
+        text-align: center;
+    }
+}
+.news-list {
+    display: flex;
+    padding-top: 15px;
+    @media #{$tablet} {
+        flex-direction: column;
+    }
+    .new {
+        width: 50%;
+        display: flex;
+        @media #{$tablet} {
+            width: 100%;
+            margin-top: 15px;
+        }
+        &__img {
+            img {
+                width: 111px;
+                height: 111px;
+                @media #{$tablet} {
+                    width: 70px;
+                    height: 70px;
+                }
             }
         }
-        ul {
-            display: flex;
-            padding-top: 15px;
-            @media #{$tablet} {
-                flex-direction: column;
+        &__text {
+            padding-left: 20px;
+            &__header {
+                font-family: 'Roboto Bold Condensed', sans-serif;
+                font-size: 14px;
+                font-weight: 400;
+                text-transform: uppercase;
+                color: $dark-green;
+                &--grey {
+                    display: block;
+                    font-family: 'Roboto Condensed', sans-serif;
+                    font-size: 14px;
+                    font-weight: 400;
+                    color: $dark-grey;
+                }
             }
-            li {
-                width: 50%;
-                display: flex;
-                @media #{$tablet} {
-                    width: 100%;
-                    margin-top: 15px;
-                }
-                .img {
-                    img {
-                        width: 111px;
-                        height: 111px;
-                        @media #{$tablet} {
-                            width: 70px;
-                            height: 70px;
-                        }
-                    }
-                }
-                .text {
-                    padding-left: 20px;
-                    h3 {
-                        font-family: 'Roboto Bold Condensed', sans-serif;
-                        font-size: 14px;
-                        font-weight: 400;
-                        text-transform: uppercase;
-                        color: $dark-green;
-                        span {
-                            display: block;
-                            font-family: 'Roboto Condensed', sans-serif;
-                            font-size: 14px;
-                            font-weight: 400;
-                            color: $dark-grey;
-                        }
-                    }
 
-                    p {
-                        font-family: 'Arial MT', sans-serif;
-                        font-size: 13px;
-                        font-weight: 400;
-                        padding-right: 10px;
-                    }
-                }
+            &__description {
+                font-family: 'Arial MT', sans-serif;
+                font-size: 13px;
+                font-weight: 400;
+                padding-right: 10px;
             }
         }
     }
