--- a/src/sass/components/reviews.scss
+++ b/src/sass/components/reviews.scss
@@ -13,174 +13,185 @@
     @media #{$mobile} {
         background-image: none;
     }
-    .container {
-        display: flex;
+}
+.container {
+    @media #{$tablet} {
+        flex-direction: column;
+    }
+}
+.wrapper {
+    display: flex;
+}
+
+.header {
+    font-size: 24px;
+    color: $white;
+    text-transform: uppercase;
+    @media #{$tablet} {
+        text-align: center;
+    }
+}
+.read-reviews {
+    position: relative;
+    width: 48.2%;
+    @media #{$tablet} {
+        width: 100%;
+    }
+    .show-all {
+        margin-top: 20px;
+        position: absolute;
+        right: 25px;
+        color: $yellow;
+        font-family: 'Arial MT', sans-serif;
+        font-size: 14px;
+        font-weight: 400;
+        text-decoration: underline;
+        display: inline-block;
+        padding: 5px;
+        border: 1px solid $yellow;
+        border-radius: 3px;
         @media #{$tablet} {
+            font-size: 16px;
+            margin-top: 20px;
+            display: block;
+            width: 100%;
+            right: 0;
+            text-align: center;
+            padding: 10px 0;
+        }
+    }
+}
+
+.review-list {
+    display: flex;
+    .review-item {
+        padding-top: 17px;
+        display: flex;
+        flex-direction: column;
+        @media #{$mobile} {
             flex-direction: column;
         }
-        h2 {
-            font-size: 24px;
+        &__name {
+            color: $yellow;
+            font-size: 14px;
+            font-family: 'Arial MT', sans-serif;
+            font-weight: 400;
+            @media #{$tablet} {
+                font-size: 16px;
+            }
+        }
+        &__text {
+            padding-top: 10px;
+            padding-right: 30px;
+            font-family: 'Arial MT', sans-serif;
             color: $white;
-            text-transform: uppercase;
+            font-size: 14px;
+            font-weight: 400;
             @media #{$tablet} {
-                text-align: center;
-            }
-        }
-        .read-reviews {
-            position: relative;
-            width: 48.5%;
-            @media #{$tablet} {
-                width: 100%;
-            }
-            ul {
-                padding-top: 17px;
-                display: flex;
-                @media #{$mobile} {
-                    flex-direction: column;
-                }
-                h3 {
-                    color: $yellow;
-                    font-size: 14px;
-                    font-family: 'Arial MT', sans-serif;
-                    font-weight: 400;
-                    @media #{$tablet} {
-                        font-size: 16px;
-                    }
-                }
-                p {
-                    padding-top: 10px;
-                    padding-right: 30px;
-                    font-family: 'Arial MT', sans-serif;
-                    color: $white;
-                    font-size: 14px;
-                    font-weight: 400;
-                    @media #{$tablet} {
-                        font-size: 16px;
-                    }
-                    @media #{$mobile} {
-                        padding-right: 0;
-                    }
-                }
-            }
-            .show-all {
-                margin-top: 20px;
-                position: absolute;
-                right: 25px;
-                color: $yellow;
-                font-family: 'Arial MT', sans-serif;
-                font-size: 14px;
-                font-weight: 400;
-                text-decoration: underline;
-                display: inline-block;
-                padding: 5px;
-                border: 1px solid $yellow;
-                border-radius: 3px;
-                @media #{$tablet} {
-                    font-size: 16px;
-                    margin-top: 20px;
-                    display: block;
-                    width: 100%;
-                    right: 0;
-                    text-align: center;
-                    padding: 10px 0;
-                }
-            }
-        }
-        .specialist {
-            width: 50%;
-            border-left: 1px solid $greener;
-            padding-left: 20px;
-            @media #{$tablet} {
-                padding-top: 80px;
-                border: none;
-                width: 100%;
-                padding-left: 0;
+                font-size: 16px;
             }
             @media #{$mobile} {
-                padding-top: 100px;
+                padding-right: 0;
             }
-            form {
-                @media #{$tablet} {
-                    text-align: center;
-                }
-                .full {
-                    width: 98%;
-                    @media #{$tablet} {
-                        width: 100%;
-                    }
-                }
-                h2 {
-                    @media #{$mobile} {
-                        padding-bottom: 20px;
-                    }
-                }
-                input {
-                    display: inline-block;
-                    border: 1px solid $yellow;
-                    border-radius: 3px;
-                    width: 48%;
-                    padding: 8px 10px;
-                    color: $black;
-                    font-family: 'Arial MT', sans-serif;
-                    font-size: 14px;
-                    &::placeholder {
-                        color: $grey;
-                        font-family: 'Arial MT', sans-serif;
-                        font-size: 14px;
-                    }
-                    @media #{$tablet} {
-                        width: 100%;
-                    }
-                    @media #{$mobile} {
-                        margin-bottom: 15px;
-                    }
-                }
-                textarea {
-                    margin-top: 18px;
-                    border: 1px solid $yellow;
-                    border-radius: 3px;
-                    width: 98%;
-                    padding: 8px 10px;
-                    color: $black;
-                    font-family: 'Arial MT', sans-serif;
-                    font-size: 14px;
-                    &::placeholder {
-                        color: $grey;
-                        font-family: 'Arial MT', sans-serif;
-                        font-size: 14px;
-                    }
-                    @media #{$tablet} {
-                        width: 100%;
-                    }
-                    @media #{$mobile} {
-                        margin-top: 0;
-                    }
-                }
-                button {
-                    margin-top: 30px;
-                    text-align: center;
-                    color: $white;
-                    font-family: 'Roboto Bold Condensed', sans-serif;
-                    font-size: 20px;
-                    line-height: 42px;
-                    text-transform: uppercase;
-                    display: inline-block;
-                    background-color: $yellow;
-                    width: 45%;
-                    height: 42px;
-                    border-radius: 3px;
-                    margin-left: 237px;
-                    @media #{$tablet} {
-                        display: block;
-                        width: 100%;
-                        margin-left: 0;
-                        margin-top: 15px;
-                    }
-                    @media #{$mobile} {
-                        margin-top: 15px;
-                    }
-                }
-            }
+        }
+    }
+
+}
+
+.specialist {
+    width: 50%;
+    border-left: 1px solid $greener;
+    padding-left: 20px;
+    @media #{$tablet} {
+        padding-top: 80px;
+        border: none;
+        width: 100%;
+        padding-left: 0;
+    }
+    @media #{$mobile} {
+        padding-top: 100px;
+    }
+}
+.spec-form {
+    @media #{$tablet} {
+        text-align: center;
+    }
+    .full {
+        width: 98%;
+        @media #{$tablet} {
+            width: 100%;
+        }
+    }
+    &__header {
+        color: $white;
+        @media #{$mobile} {
+            padding-bottom: 20px;
+        }
+    }
+    &__input {
+        display: inline-block;
+        border: 1px solid $yellow;
+        border-radius: 3px;
+        width: 48%;
+        padding: 8px 10px;
+        color: $black;
+        font-family: 'Arial MT', sans-serif;
+        font-size: 14px;
+        &::placeholder {
+            color: $grey;
+            font-family: 'Arial MT', sans-serif;
+            font-size: 14px;
+        }
+        @media #{$tablet} {
+            width: 100%;
+        }
+        @media #{$mobile} {
+            margin-bottom: 15px;
+        }
+    }
+    &__textarea {
+        margin-top: 18px;
+        border: 1px solid $yellow;
+        border-radius: 3px;
+        width: 98%;
+        padding: 8px 10px;
+        color: $black;
+        font-family: 'Arial MT', sans-serif;
+        font-size: 14px;
+        &::placeholder {
+            color: $grey;
+            font-family: 'Arial MT', sans-serif;
+            font-size: 14px;
+        }
+        @media #{$tablet} {
+            width: 100%;
+        }
+        @media #{$mobile} {
+            margin-top: 0;
+        }
+    }
+    &__btn {
+        margin-top: 30px;
+        text-align: center;
+        color: $white;
+        font-family: 'Roboto Bold Condensed', sans-serif;
+        font-size: 20px;
+        line-height: 42px;
+        text-transform: uppercase;
+        display: inline-block;
+        background-color: $yellow;
+        width: 45%;
+        height: 42px;
+        border-radius: 3px;
+        margin-left: 237px;
+        @media #{$tablet} {
+            display: block;
+            width: 100%;
+            margin-left: 0;
+            margin-top: 15px;
+        }
+        @media #{$mobile} {
+            margin-top: 15px;
         }
     }
 }
