--- a/src/sass/components/company.scss
+++ b/src/sass/components/company.scss
@@ -1,4 +1,4 @@
-.company {
+.about {
     padding-top: 50px;
     padding-bottom: 45px;
     box-shadow: inset 0 0 0 #ffffff;
@@ -6,43 +6,49 @@
     background-image: url("../img/layer-28-copy.png");
     background-position: 37% 88%;
     background-repeat: no-repeat;
-}
-.header {
-    font-size: 24px;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: $black;
-    @media #{$tablet} {
-        text-align: center;
-    }
-}
-.description {
-    padding-top: 11px;
-    color: $black;
-    font-family: 'Arial MT', sans-serif;
-    font-size: 14px;
-}
-.photos {
-    padding-top: 30px;
-    display: flex;
-    justify-content: space-between;
-    @media #{$mobile} {
-        flex-wrap: wrap;
-    }
-    .item {
-        display: flex;
-        flex-direction: column;
-        @media #{$mobile} {
-            width: 50%;
-        }
-        &__text, &__img {
+    &__title {
+        font-size: 24px;
+        font-weight: 400;
+        text-transform: uppercase;
+        color: $black;
+        @media #{$tablet} {
             text-align: center;
-            max-width: 150px;
-            font-size: 17px;
-            text-transform: uppercase;
+        }
+    }
+    &__description {
+        padding-top: 11px;
+        color: $black;
+        font-family: 'Arial MT', sans-serif;
+        font-size: 14px;
+    }
+    &__benefits {
+        padding-top: 30px;
+        display: flex;
+        justify-content: space-between;
+        @media #{$mobile} {
+            flex-wrap: wrap;
+        }
+    }
+    .benefits {
+        &__item {
+            display: flex;
+            flex-direction: column;
             @media #{$mobile} {
-                font-size: 14px;
+                width: 50%;
+            }
+            &__descr, &__icon {
+                text-align: center;
+                max-width: 150px;
+                font-size: 17px;
+                text-transform: uppercase;
+                @media #{$mobile} {
+                    font-size: 14px;
+                }
             }
         }
     }
+
 }
+
+
+
