--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -64,30 +64,50 @@ footer {
                     }
                 }
             }
-            .contacts {
+            .f-contacts {
+                padding-top: 5px;
+                position: relative;
+                color: $black;
                 display: flex;
-                justify-content: space-between;
-                p {
-                    padding-left: 20px;
+                flex-direction: column;
+                @media #{$mobile} {
+                    padding-bottom: 5px;
+                }
+                &__number {
                     display: block;
-                    font-size: 18px;
+                    position: relative;
+                    font-size: 26px;
                     font-weight: 400;
                     font-family: 'Roboto Condensed', sans-serif;
                     text-align: right;
+                    color: $black;
                     @media #{$mobile} {
-                        padding-left: 0;
+                        text-align: left;
+                        padding-left: 25px;
+                        font-size: 18px;
                     }
-                    span {
-                        font-size: 20px;
+                    &--bold {
                         font-family: 'Roboto Bold Condensed', sans-serif;
                         font-weight: 700;
                     }
                 }
-                span {
-                    font-family: 'Arial MT', sans-serif;
-                    font-weight: 400;
-                    font-size: 14px;
+                &__cr-link {
+                    text-align: right;
                     text-decoration: underline;
+                    color: $another-black;
+                    font-size: 14px;
+                    font-weight: 400;
+                    line-height: 31px;
+                    @media #{$mobile} {
+                        top: 0;
+                        width: 120px;
+                        font-size: 12px;
+                        line-height: 20px;
+                    }
+                    &:hover {
+                        color: $yellow;
+                    }
+
                 }
             }
         }
