--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -15,27 +15,25 @@ header {
 .logo {
     display: flex;
     width: 150px;
-    .wrap {
-        &__img {
-            @media #{$mobile} {
-                width: 130px;
-                margin-top: 18px;
-            }
+    &__img {
+        @media #{$mobile} {
+            width: 130px;
+            margin-top: 18px;
         }
-        &__text {
-            @media #{$tablet} {
-                padding-top: 12px;
-            }
-            @media #{$mobile} {
-                font-size: 16px;
-            }
-            padding-top: 10px;
-            padding-left: 5px;
-            color: $green;
-            text-transform: uppercase;
-            font-size: 18px;
-            font-weight: 400;
+    }
+    &__descr {
+        @media #{$tablet} {
+            padding-top: 12px;
         }
+        @media #{$mobile} {
+            font-size: 16px;
+        }
+        padding-top: 10px;
+        padding-left: 5px;
+        color: $green;
+        text-transform: uppercase;
+        font-size: 18px;
+        font-weight: 400;
     }
 }
 .contacts {
@@ -54,6 +52,7 @@ header {
         font-weight: 400;
         font-family: 'Roboto Condensed', sans-serif;
         text-align: right;
+        color: $black;
         @media #{$mobile} {
             text-align: left;
             padding-left: 25px;
