--- a/src/sass/components/main.scss
+++ b/src/sass/components/main.scss
@@ -1,4 +1,4 @@
-.elements {
+.services {
     box-shadow: inset 0 0 0 #ffffff;
     background-color: #898989;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.22) 0%, rgba(255, 255, 255, 0.22) 50%, rgba(0, 0, 0, 0.22) 100%);
@@ -6,7 +6,7 @@
     background-position: 40% 32%;
     background-repeat: no-repeat;
 }
-.services {
+.service {
     display: flex;
     @media #{$mobile} {
         flex-direction: column;
@@ -18,55 +18,44 @@
         min-height: 337px;
         border: none;
         padding: 0;
+        background-size: 100%;
+        background-repeat: no-repeat;
         @media #{$mobile} {
             width: 100%;
             -webkit-background-size: 102%;
             background-size: 102%;
         }
+    }
+}
+.serv {
+    &__title {
+        position: absolute;
+        top: -2px;
+        width: 100%;
+        padding: 17px;
+        font-size: 24px;
+        text-transform: uppercase;
+        color: $white;
+        background-color: $dark-green;
+        opacity: 0.9;
+    }
+    &__subtitle {
+        position: absolute;
+        bottom: 30px;
+        width: 100%;
+        padding: 5px 15px;
+        font-size: 16px;
+        font-weight: 400;
+        font-family: 'Roboto Condensed', sans-serif;
+        color: $white;
+        background-color: $dark-green;
+        opacity: 0.9;
+    }
+    .b-first {
+        @media #{$tablet} {
+            bottom: 10px;
+        }
 
-        &--one {
-            background-image: url("../img/layer-1.png");
-            background-size: 100%;
-            background-repeat: no-repeat;
-        }
-        &--two {
-            background-image: url("../img/layer-2.png");
-        }
-        &--three {
-            background-image: url("../img/layer-3.png");
-        }
-        &--four {
-            background-image: url("../img/layer-4.png");
-        }
-        &__top {
-            position: absolute;
-            top: -2px;
-            width: 100%;
-            padding: 17px;
-            font-size: 24px;
-            text-transform: uppercase;
-            color: $white;
-            background-color: $dark-green;
-            opacity: 0.9;
-        }
-        &__bottom {
-            position: absolute;
-            bottom: 30px;
-            width: 100%;
-            padding: 5px 15px;
-            font-size: 16px;
-            font-weight: 400;
-            font-family: 'Roboto Condensed', sans-serif;
-            color: $white;
-            background-color: $dark-green;
-            opacity: 0.9;
-        }
-        .b-first {
-            @media #{$tablet} {
-                bottom: 10px;
-            }
-
-        }
     }
 }
 
