--- a/src/sass/components/yellow.scss
+++ b/src/sass/components/yellow.scss
@@ -1,4 +1,4 @@
-.yellow {
+.prod {
     background-color: $yellow;
     padding-bottom: 30px;
 
@@ -8,16 +8,16 @@
         flex-direction: column;
     }
 }
-.panel-wrap {
+.products {
     display: flex;
 }
-.panel {
+.product {
     width: 50%;
     margin-top: 25px;
     @media #{$mobile} {
         width: 100%;
     }
-    &__siding {
+    &__item {
         padding-bottom: 50px;
         border-right: 1px solid $dark-green;
         @media #{$mobile} {
@@ -31,7 +31,7 @@
             padding-left: 0;
         }
     }
-    &__top {
+    &__title {
         padding-top: 15px;
         font-size: 24px;
         font-weight: 400;
